--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
     <!-- <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}"> -->
     
     <meta name="theme-color" content="#FF0000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
