--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
-    <!-- <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}"> -->
-    
-    <meta name="theme-color" content="#FF0000">
+    <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
