--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    
+
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
     <!-- Web App Manifest -->
@@ -18,7 +18,7 @@
 
     <!-- Safari Webpage Icon -->
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/CYyou!_icon_128.png">
-    
+
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
@@ -52,5 +52,5 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script src="{{ site.baseurl }}/js/md5.min.js"></script>
 </head>
