--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,5 +52,5 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script src="/js/md5.min.js"></script>
+    <script src="https://cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.js"></script>
 </head>
