--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -143,6 +143,10 @@ layout: default
                 </section>
                 {% endif %}
 
+                <hr>
+                <h5>Discord</h5>
+                <iframe src="https://discordapp.com/widget?id=341447602115444746&amp;theme=dark" width="230" height="390" allowtransparency="true" frameborder="0"></iframe>
+
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
