--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,6 +49,10 @@ layout: default
                 </section>
                 {% endif %}
 
+                <hr>
+                <h5>Discord</h5>
+                <iframe src="https://discordapp.com/widget?id=341447602115444746&amp;theme=dark" width="230" height="390" allowtransparency="true" frameborder="0"></iframe>
+
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
@@ -183,7 +187,7 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
-                            
+
                         </ul>
                         {% if site.email %}
                             <p>✉️ {{site.email}}</p>
