--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,12 +49,10 @@ layout: default
                 </section>
                 {% endif %}
 
-                <hr>
-                <h5>Discord</h5>
-                <iframe src="https://discordapp.com/widget?id=341447602115444746&amp;theme=dark" width="230" height="390" allowtransparency="true" frameborder="0"></iframe>
-
                 <!-- Friends Blog -->
                 {% if site.friends %}
+                <hr>
+                <iframe src="https://discordapp.com/widget?id=341447602115444746&theme=dark" width="390" height="230" allowtransparency="true" frameborder="0"></iframe>
                 <hr>
                 <h5>FRIENDS</h5>
                 <ul class="list-inline">
