--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -183,6 +183,16 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
+                            {% if site.discord_username %}
+                            <li>
+                                <a target="_blank" href="https://discord.gg/{{ site.discord_username }}">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
 
                         </ul>
                         {% if site.email %}
