--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -188,7 +188,7 @@ layout: default
                                 <a target="_blank" href="https://discord.gg/{{ site.discord_username }}">
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fa  fa-stack-1x fa-inverse">D</i>
                                     </span>
                                 </a>
                             </li>
